--- a/src/styles/Work.css
+++ b/src/styles/Work.css
@@ -90,7 +90,7 @@
     clip-path: polygon(0 0, 30% 0, 37% 10%, 100% 10%, 100% 100%, 0 100%);
     max-width: 380px;
     flex-basis: 100%;
-    height: 290px;
+    min-height: 290px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
